<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D1DDE1"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_firstPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/firstPassword"
            android:textSize="23sp" />

        <EditText
            android:id="@+id/et_firstPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=""
            android:paddingLeft="20dp" />

        <TextView
            android:id="@+id/tv_secondPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/secondPassword"
            android:textSize="23sp" />

        <EditText
            android:id="@+id/et_secondPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=""
            android:paddingLeft="20dp" />

        <Button
            android:id="@+id/btn_commit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:text="提交" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/prompt"
            android:textSize="23sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/resetPassword_about"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>