<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#D1DDE1"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingLeft="25dp"
            android:text="@string/account" />

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="孙成成"
            android:textColor="#BFBFBF" />
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#D1DDE1" />

    <LinearLayout
        android:id="@+id/resetPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="25dp"
            android:text="@string/resetPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/my_logo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:paddingLeft="25dp"
            android:text="@string/my_logo" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/user"
            android:layout_gravity="right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nickname"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingLeft="25dp"
            android:text="@string/nickname" />

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="孙大成"
            android:textColor="#BFBFBF" />
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#D1DDE1" />

    <LinearLayout
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingLeft="25dp"
            android:text="@string/age" />

        <TextView
            android:id="@+id/tv_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="4.5"
            android:textColor="#BFBFBF" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tellphone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="25dp"
            android:text="@string/tellphone" />

        <TextView
            android:id="@+id/tv_tellphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="13800138000"
            android:textColor="#BFBFBF" />
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#D1DDE1" />

    <LinearLayout
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="25dp"
            android:text="@string/address" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="天上人间"
            android:textColor="#BFBFBF" />
    </LinearLayout>

     <Button 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="退出登录"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:background="#ff0000"
         />
</LinearLayout>